--- a/HPA/.classpath
+++ b/HPA/.classpath
@@ -15,8 +15,6 @@
 	<classpathentry kind="lib" path="lib/log4j-1.2.8.jar"/>
 	<classpathentry kind="lib" path="lib/mail.jar"/>
 	<classpathentry kind="lib" path="lib/mailapi.jar"/>
-	<classpathentry kind="lib" path="lib/selenium-java-2.15.0-srcs.jar"/>
-	<classpathentry kind="lib" path="lib/selenium-java-2.15.0.jar"/>
 	<classpathentry kind="lib" path="lib/testng-6.0.1-nobsh-noguice.jar"/>
 	<classpathentry kind="lib" path="lib/poi-3.9-20121203.jar"/>
 	<classpathentry kind="lib" path="lib/poi-ooxml-3.9-20121203.jar"/>
@@ -24,5 +22,8 @@
 	<classpathentry kind="lib" path="lib/selenium-server-standalone-2.39.0.jar"/>
 	<classpathentry kind="lib" path="lib/xmlbeans-2.3.0.jar"/>
 	<classpathentry kind="lib" path="lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.0.8-bin.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.44.0-srcs.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.44.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
